# ev_info_display

./: README.md
enclosure/: readme.md
enclosure/openscad/: ev_info_display_enc.scad
enclosure/stl/: ev_info_display_enc_mount.stl  ev_info_display_enc_short_base.stl  ev_info_display_enc_tall_base.stl  ev_info_display_enc_top.stl
firmware/: CMakeLists.txt  sdkconfig  sdkconfig.old
firmware/components/can/: CMakeLists.txt  can_driver_elm327.c  can_driver_elm327.h  can_driver_twai.c  can_driver_twai.h  can_manager.c  can_manager.h  elm327_interface_ble.c  elm327_interface_ble.h  elm327_interface_wifi.c  elm327_interface_wifi.h
firmware/components/data_broker/: CMakeLists.txt  data_broker.c  data_broker.h
firmware/components/gui/: CMakeLists.txt  gui_screen_ble.c  gui_screen_ble.h  gui_screen_intro.c  gui_screen_intro.h  gui_screen_main.c  gui_screen_main.h  gui_screen_wifi.c  gui_screen_wifi.h  gui_tile_electrical.c  gui_tile_electrical.h  gui_tile_power.c  gui_tile_power.h  gui_tile_settings.c  gui_tile_settings.h  gui_tile_timed.c  gui_tile_timed.h  gui_tile_torque.c  gui_tile_torque.h  gui_utilities.c  gui_utilities.h
firmware/components/gui_assets/: CMakeLists.txt
firmware/components/lvgl_drivers/: CMakeLists.txt  Kconfig
firmware/components/lvgl_drivers/lvgl_tft/: CMakeLists.txt  ST7701S.c  ST7701S.h  disp_driver.c  disp_driver.h  mem_fb.c  mem_fb.h
firmware/components/lvgl_drivers/lvgl_touch/: CMakeLists.txt  gt911.c  gt911.h  touch_driver.c  touch_driver.h
firmware/main/: CMakeLists.txt  can_task.c  can_task.h  gui_task.c  gui_task.h  main.c
(+22 files in other folders)
